feat: Updated OpenAPI spec (#49)
